# iPlug2

./: .gitignore  CMakeLists.txt
Dependencies/: CMakeLists.txt
Examples/CMake/: CMakeLists.txt
Examples/CMake/IPlugEffect/: CMakeLists.txt  IPlugEffect.cpp  IPlugEffect.h
IPlug/: IPlug_include_in_plug_hdr.h  IPlug_include_in_plug_src.h
WDL/: CMakeLists.txt
WDL/giflib/: CMakeLists.txt
WDL/jnetlib/: CMakeLists.txt
WDL/jpeglib/: CMakeLists.txt
WDL/libpng/: CMakeLists.txt
WDL/zlib/: CMakeLists.txt
