add_subdirectory(giflib)
add_subdirectory(jnetlib)
add_subdirectory(jpeglib)
add_subdirectory(libpng)
add_subdirectory(zlib)

set(WDL_SOURCE
  "cmath/bessel_polynomial.h"
  "cmath/complex_number.h"
  "cmath/custom_math.h"
  "cmath/durand_kerner.h"
  "cmath/factorial.h"
  "cmath/horner.h"

  "adpcm_decode.h"
  "adpcm_encode.h"
  "assocarray.h"
  "audiobuffercontainer.cpp"
  "audiobuffercontainer.h"
  "besselfilter.cpp"
  "besselfilter.h"
  "bitfield.h"
  "chunkalloc.h"
  "circbuf.h"
  "CMakeLists.txt"
  "convoengine.cpp"
  "convoengine.h"
  "coreaudio_channel_formats.h"
  "db2val.h"
  "delay_line.h"
  "denormal.h"
  "destroycheck.h"
  "diffcalc.h"
  "dirscan.h"
  "eel2"
  "fastqueue.h"
  "fft.c"
  "fft.h"
  "filebrowse.cpp"
  "filebrowse.h"
  "filename.h"
  "fileread.h"
  "filewrite.h"
  "fnv64.h"
  "has_strings.h"
  "heapbuf.h"
  "lameencdec.cpp"
  "lameencdec.h"
  "lineparse.h"
  "md5.c"
  "md5.h"
  "mergesort.h"
  "MersenneTwister.h"
  "metadata.h"
  "mp3write.h"
  "mutex.h"
  "pcmfmtcvt.h"
  "poollist.h"
  "projectcontext.cpp"
  "projectcontext.h"
  "ptrlist.h"
  "ptrlist_indexed.h"
  "queue.h"
  "resample.cpp"
  "resample.h"
  "rng.cpp"
  "rng.h"
  "rpool.h"
  "scalafile.h"
  "scsrc.cpp"
  "scsrc.h"
  "setthreadname.h"
  "sha.cpp"
  "sha.h"
  "sharedpool.h"
  "shm_connection.cpp"
  "shm_connection.h"
  "shm_msgreply.cpp"
  "shm_msgreply.h"
  "simple_pitchshift.h"
  "sinewavegen.h"
  "stringpool.h"
  "time_precise.h"
  "timing.c"
  "timing.h"
  "turtleparse.h"
  "verbengine.h"
  "vorbisencdec.h"
  "wavwrite.h"
  "wdlatomic.h"
  "wdlcstring.h"
  "wdlendian.h"
  "wdlstring.h"
  "wdltypes.h"
  "wdlutf8.h"
  "wdl_base64.h"
  "win32_curses"
  "win32_helpers.h"
  "win32_hidpi.h"
  "win32_printf.h"
  "win32_utf8.c"
  "win32_utf8.h"
  "win7filedialog.h"
  "xmlparse.h"
  "xmlparse_test.cpp"
  "xsrand.h")

add_library(wdl ${WDL_SOURCE})
target_include_directories(wdl PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
target_link_libraries(wdl
  PUBLIC
    giflib-wdl
    jnetlib-wdl
    jpeglib-wdl
    libpng-wdl
    zlib-wdl)