set(ZLIB_SOURCE
  "adler32.c"
  "compress.c"
  "crc32.c"
  "crc32.h"
  "deflate.c"
  "deflate.h"
  "gzclose.c"
  "gzguts.h"
  "gzlib.c"
  "gzread.c"
  "gzwrite.c"
  "infback.c"
  "inffast.c"
  "inffast.h"
  "inffixed.h"
  "inflate.c"
  "inflate.h"
  "inftrees.c"
  "inftrees.h"
  "ioapi.c"
  "ioapi.h"
  "trees.c"
  "trees.h"
  "uncompr.c"
  "unzip.c"
  "unzip.h"
  "zconf.h"
  "zip.c"
  "zip.h"
  "zlib.h"
  "zlib_import.h"
  "zutil.c"
  "zutil.h")

add_library(zlib-wdl ${ZLIB_SOURCE})